--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 AMI_ID=ami-04b4f1a9cf54c11d0
 COUNT=1
 INSTANCE_TYPE=t2.small
-KEY_NAME=administrador
+KEY_NAME=vockey
 
 SECURITY_GROUP_FRONTEND=frontend-sg
 SECURITY_GROUP_BACKEND=backend-sg
